[profile.release]
panic = 'unwind'

[workspace]
members = [
  'node',
  'runtime/hydradx',
  'pallets/omnipool',
  'pallets/dca',
  'primitives',
  'utils/build-script-utils',
   'integration-tests',
  'pallets/circuit-breaker',
  'pallets/xcm-rate-limiter',
  'pallets/omnipool-liquidity-mining',
  'scraper',
  'traits',
  'pallets/relaychain-info',
  'pallets/route-executor',
  'pallets/transaction-multi-payment',
  'pallets/asset-registry',
  'runtime/adapters',
  'pallets/collator-rewards',
  'pallets/transaction-pause',
  'pallets/ema-oracle',
  'pallets/liquidity-mining',
  'pallets/currencies',
  'pallets/stableswap',
  'utils/test-utils',
  'pallets/dynamic-fees',
  'pallets/duster',
  'pallets/otc',
  'pallets/bonds',
  'pallets/lbp',
  'pallets/nft',
  'math',
  'pallets/staking',
  'pallets/democracy',
]

[workspace.dependencies]
log = "0.4.20"
hydra-dx-math = { path = "math", default-features = false }
hydradx = { path = "node", default-features = false }
hydradx-traits = { path = "traits", default-features = false }
primitives = { path = "primitives", default-features = false }

hydradx-adapters = { path = "runtime/adapters", default-features = false }
hydradx-runtime = { path = "runtime/hydradx", default-features = false }

pallet-asset-registry = { path = "pallets/asset-registry", default-features = false }
pallet-circuit-breaker = { path = "pallets/circuit-breaker", default-features = false }
pallet-claims = { path = "pallets/claims", default-features = false }
pallet-collator-rewards = { path = "pallets/collator-rewards", default-features = false }
pallet-currencies = { path = "pallets/currencies", default-features = false }
pallet-dca = { path = "pallets/dca", default-features = false }
pallet-duster = { path = "pallets/duster", default-features = false }
pallet-dynamic-fees = { path = "pallets/dynamic-fees", default-features = false }
pallet-ema-oracle = { path = "pallets/ema-oracle", default-features = false }
pallet-genesis-history = { path = "pallets/genesis-history", default-features = false }
pallet-liquidity-mining = { path = "pallets/liquidity-mining", default-features = false }
pallet-nft = { path = "pallets/nft", default-features = false }
pallet-omnipool = { path = "pallets/omnipool", default-features = false }
pallet-omnipool-liquidity-mining = { path = "pallets/omnipool-liquidity-mining", default-features = false }
pallet-otc = { path = "pallets/otc", default-features = false}
pallet-relaychain-info = { path = "pallets/relaychain-info", default-features = false }
pallet-route-executor = { path = "pallets/route-executor", default-features = false }
pallet-stableswap = { path = "pallets/stableswap", default-features = false }
pallet-transaction-multi-payment = { path = "pallets/transaction-multi-payment", default-features = false }
pallet-transaction-pause = { path = "pallets/transaction-pause", default-features = false }
pallet-staking = { path = "pallets/staking", default-features = false }
pallet-democracy= { path = "pallets/democracy", default-features = false }
pallet-xcm-rate-limiter = { path = "pallets/xcm-rate-limiter", default-features = false }
warehouse-liquidity-mining = { package = "pallet-liquidity-mining", path = "pallets/liquidity-mining", default-features = false }
pallet-bonds = { path = "pallets/bonds", default-features = false}
pallet-lbp = { path = "pallets/lbp", default-features = false}
pallet-xyk = { path = "pallets/xyk", default-features = false}

hydra-dx-build-script-utils = { path = "utils/build-script-utils", default-features = false }
scraper = { path = "scraper", default-features = false }
test-utils = { path = "utils/test-utils", default-features = false }

integration-tests = { path = "integration-tests", default-features = false }

# Codec
codec = { package = "parity-scale-codec", version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.1.2", default-features = false, features = ["derive"] }
primitive-types = { version = "0.12.0", default-features = false }

# Frame
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-benchmarking-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-remote-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
frame-try-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-authority-discovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-consensus-babe = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-npos-elections = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-offchain = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-std = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-storage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-trie = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sp-version = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-basic-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-chain-spec = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-consensus-grandpa = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-executor = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-keystore = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-network-sync = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-network-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-rpc-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-telemetry = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-tracing = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
sc-sysinfo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

# Substrate Pallets
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-collective = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-elections-phragmen = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-identity = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-preimage = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-proxy = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-scheduler = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-tips = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-treasury = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-uniques = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

substrate-build-script-utils = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
substrate-rpc-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
substrate-wasm-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

# ORML dependencies
orml-benchmarking = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-currencies = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-traits = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-utilities = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-vesting = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }

# orml XCM support
orml-unknown-tokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-xcm = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-xcm-support = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }
orml-xtokens = { git = "https://github.com/open-web3-stack/open-runtime-module-library", branch = "polkadot-v1.1.0", default-features = false }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-collator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-consensus-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-consensus-proposer = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-network = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-client-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-aura-ext = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-dmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-parachain-system = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-pallet-xcmp-queue = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-core = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-parachain-inherent = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-primitives-utility = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-relay-chain-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-relay-chain-minimal-node = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
cumulus-test-relay-sproof-builder = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
pallet-collator-selection = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
parachain-info = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
xcm-emulator = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

# Polkadot dependencies
pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-parachain = { package = "polkadot-parachain-primitives", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false, features =  [
  "wasm-api",
]}
polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
polkadot-xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0", default-features = false }

# [patch."https://github.com/paritytech/polkadot"] // TODO
kusama-runtime = { package = "staging-kusama-runtime", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# pallet-xcm = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# polkadot-cli = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-client = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# polkadot-core-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-node-core-pvf = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-node-network-protocol = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-node-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-node-subsystem = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-node-subsystem-util = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-overseer = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# polkadot-parachain = { package = "polkadot-parachain-primitives", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# polkadot-primitives = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# polkadot-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-runtime-common = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# polkadot-service = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
polkadot-statement-table = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
rococo-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
westend-runtime = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# xcm = { package = "staging-xcm", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# xcm-builder = { packege = "staging-xcm-builder", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
# xcm-executor = { packege = "staging-xcm-executor", git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

cumulus-client-pov-recovery = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
cumulus-pallet-parachain-system-proc-macro = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/paritytech/polkadot-sdk", branch = "release-polkadot-v1.1.0" }

[patch."https://github.com/paritytech/polkadot-sdk"]
frame-benchmarking = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
frame-benchmarking-cli = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
frame-executive = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
frame-remote-externalities = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
frame-support = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
frame-system = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
frame-system-benchmarking = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
frame-system-rpc-runtime-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
frame-try-runtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-arithmetic = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-authority-discovery = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-block-builder = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-blockchain = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-consensus = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-consensus-aura = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-consensus-babe = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-core = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-externalities = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-inherents = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-io = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-keystore = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-npos-elections = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-offchain = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-offchain = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-rpc = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-runtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-session = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-staking = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-std = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-storage = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-timestamp = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-tracing = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-transaction-pool = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-trie = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sp-version = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-basic-authorship = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-chain-spec = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-cli = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-client-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-consensus = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-consensus-aura = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-consensus-grandpa = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-executor = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-keystore = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-network = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-network-sync = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-network-common = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-rpc = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-rpc-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-service = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-telemetry = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-tracing = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-transaction-pool = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-transaction-pool-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
sc-sysinfo = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }

# Substrate Pallets
pallet-aura = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-authorship = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-balances = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-collective = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-elections-phragmen = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-identity = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-multisig = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-preimage = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-proxy = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-scheduler = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-session = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-sudo = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-timestamp = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-tips = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-transaction-payment = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-transaction-payment-rpc = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-treasury = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-uniques = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-utility = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-im-online = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }

substrate-build-script-utils = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
substrate-frame-rpc-system = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
substrate-prometheus-endpoint = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
substrate-rpc-client = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
substrate-wasm-builder = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }

# Cumulus dependencies
cumulus-client-cli = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-client-collator = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-client-consensus-aura = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-client-consensus-common = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-client-consensus-proposer = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-client-network = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-client-service = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-pallet-aura-ext = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-pallet-dmp-queue = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-pallet-parachain-system = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-pallet-xcm = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-pallet-xcmp-queue = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-primitives-core = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-primitives-parachain-inherent = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-primitives-timestamp = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-primitives-utility = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-relay-chain-inprocess-interface = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-relay-chain-interface = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-relay-chain-minimal-node = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-test-relay-sproof-builder = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
pallet-collator-selection = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
parachain-info = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
xcm-emulator = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }

# Polkadot dependencies
pallet-xcm = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-cli = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-core-primitives = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-parachain = { package = "polkadot-parachain-primitives", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking"}
polkadot-primitives = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-runtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-runtime-parachains = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-service = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
#polkadot-xcm = { package = "staging-xcm", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
xcm = { package = "staging-xcm", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
xcm-builder = { package = "staging-xcm-builder", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
xcm-executor = { package = "staging-xcm-executor", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking"  }

kusama-runtime = { package = "staging-kusama-runtime", git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
#polkadot-client = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-node-core-pvf = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-node-network-protocol = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-node-primitives = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-node-subsystem = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-node-subsystem-util = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-overseer = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-runtime-common = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
polkadot-statement-table = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
rococo-runtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
westend-runtime = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }

cumulus-client-pov-recovery = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-pallet-parachain-system-proc-macro = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }
cumulus-relay-chain-rpc-interface = { git = "https://github.com/galacticcouncil/polkadot-sdk", branch = "apopiak/xcmp-pov-benchmarking" }

