[package]
name = "hydration-solver"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hydration-solver"
path = "src/bin/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = {workspace = true}
tracing = {workspace = true}
sp-runtime = {workspace = true}
sp-core = {workspace = true}
sp-api = {workspace = true}
sc-client-api = {workspace = true}
sc-transaction-pool-api = {workspace = true}
primitives = {workspace = true}
clarabel = {workspace = true}
pallet-ice = {workspace = true, default-features = false}
pallet-omnipool = {workspace = true, default-features = false}
pallet-dynamic-fees = {workspace = true, default-features = false}
pallet-asset-registry = {workspace = true, default-features = false}
hydradx-adapters = {workspace = true, default-features = false}
frame-system = {workspace = true, default-features = false}
hydradx-runtime = {workspace = true, default-features = false}
hydradx-traits = {workspace = true, default-features = false}

highs = "1.6.1"
#numpy = "0.22.1"
ndarray = "0.16.1"
float_next_after= "1.0.0"
serde = { version = "1.0.197", features = ["derive"] }

[dev-dependencies]
rand = { version = "0.8.5", default-features = false }
serde_json = {workspace = true}
chrono = "0.4.19"

[features]
default = ["sp-runtime/std",
    "sp-core/std",
    "sp-api/std",
    "pallet-ice/std",
    "primitives/std",
    "pallet-omnipool/std",
    "pallet-dynamic-fees/std",
    "pallet-asset-registry/std",
    "hydradx-adapters/std",
    "frame-system/std",
]
